# marl-opp-aware

./: .gitignore  .zenodo.json  CITATION.cff  CONTRIBUTING.md  EXPLAINER.md  LICENSE  Makefile  README.md  environment.yml  marl_opp_aware_results.pptx  pyproject.toml  requirements-full.txt  requirements.txt
.github/workflows/: ci.yml
configs/: config.yaml
configs/alg/: mappo_intent_belief.yaml  (+22 more)
docs/: METHODS.md  PAPER_ARTIFACT.md  PRESENTATION_NOTES.md  REPRODUCIBILITY.md  RESULTS_MANIFEST.md  exp4_results.tex  exp5_results.tex  intent_opponent_modeling.tex  literature_review.md
mopa/: __init__.py  bc.py  data.py  encoders.py  features.py  legacy.py  paths.py  results.py  samples.py  splits.py
scripts/: build_deck.mjs  build_deck.py
site/: index.html
src/: brittleness_crossplay.py  compare_plots.py  compare_static_plots.py  exp2_behavior_mining.py  exp4_vae_separation.py  exp5_demo.py  exp5_specialist_strategy.py  exp5b_encoder_length.py  gen_traj_random_only.py  generate_trajectory_dataset.py  generate_trajectory_dataset_resources.py  intent_demo.py  iql_teams.py  iql_teams_mlp.py  iql_teams_oa.py  iql_teams_oa_mlp.py  jepa_demo.py  jepa_inference_speed.py  jepa_vs_vae_encoder.py  lit_review_s2.py  lit_review_s2_patch.py  mappo_teams_mlp.py  part1_latent_bc.py  part2_intent_eval.py  part2_jepa_planner.py  part2_planner.py  part3_learned_planner.py  part4_jepa_world_planner.py  planning_eval.py  plot_exp3.py  plot_exp4.py  plot_metrics.py  simple_tag_intent.py  simple_tag_resources.py  simple_tag_static.py  smoke_test_resources.py  smoke_test_static.py  tournament.py  tournament_resources.py  train_traj_vae.py  (+5 more)
tests/: test_features.py  test_results.py  test_samples_and_splits.py
(+257 files in other folders)
