[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "marl-opp-aware"
version = "0.1.0"
description = "Opponent-strategy latent encoders (VAE / JEPA), belief-conditioned planning, and latent-conditioned BC for the predator-prey-resources MARL testbed."
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "jax",
    "flax",
    "optax",
    "scikit-learn",
    "matplotlib",
]

[project.scripts]
mopa-latent-resources = "mopa.experiments.latent_resources:main"
mopa-bc-latent = "mopa.experiments.bc_latent:main"
mopa-bc-latent-sweep = "mopa.experiments.bc_latent_sweep:main"
mopa-bc-vs-mappo = "mopa.experiments.bc_vs_mappo:main"
mopa-check-results = "mopa.results:main"

[project.optional-dependencies]
dev = ["pytest"]
full = [
    "hydra-core",
    "flashbax",
    "wandb",
    "distrax",
    "pillow",
]

[tool.setuptools.packages.find]
include = ["mopa*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
